--- a/todo-frontend/src/app/task/task.component.html
+++ b/todo-frontend/src/app/task/task.component.html
@@ -1,7 +1,7 @@
 <mat-card class="task-card">
     <mat-card-content>{{todo.todo_task}}</mat-card-content>
     <mat-card-actions align="end">
-        <button mat-button (click)="onEdit()">EDIT</button>
+        <!-- <button mat-button (click)="onEdit()">EDIT</button> -->
         <button mat-button (click)="onDelete()">DELETE</button>
       </mat-card-actions>
 </mat-card>
