--- a/todo-frontend/src/app/input/input.component.html
+++ b/todo-frontend/src/app/input/input.component.html
@@ -4,7 +4,7 @@
         <mat-form-field appearance="outline" class="inputfield" style="margin-right: 2vh;">
             <mat-label>Add Todo</mat-label>
             <input matInput formControlName="todo_task">
-            <mat-hint>For example: Water plants</mat-hint>
+            <mat-hint>For example: Drink beer!</mat-hint>
         </mat-form-field>
         <button mat-raised-button type="submit" color="primary" class="inputButton">ADD</button>
         </form>
