--- a/todoui-angular/src/app/app.component.html
+++ b/todoui-angular/src/app/app.component.html
@@ -225,6 +225,8 @@
           <clipPath id="a"><path fill="#fff" d="M0 0h982v239H0z" /></clipPath>
         </defs>
       </svg>
+      <div> The API URL is: {{ process.env['API_URL'] }}</div>
+
       <h1>Hello, {{ title }}</h1>
       <p>Congratulations! Your app is running. 🎉</p>
     </div>
