--- a/todoui-angular/src/app/todo/todo.component.html
+++ b/todoui-angular/src/app/todo/todo.component.html
@@ -1,14 +1,17 @@
-<!-- todo.component.html -->
-
-<div>
-    <h2>ToDo App</h2>
-    <input [(ngModel)]="newTodo" placeholder="Add a new ToDo" />
+<div class="wrapper">
+  <h1>ToDo App</h1>
+  <div class="add">
+    <input [(ngModel)]="newTodo" placeholder="Add a new ToDo" (keydown)="($event.key === 'Enter') ? addTodo() : null "/>
     <button (click)="addTodo()">Add</button>
+  </div>
 
-    <ul>
-      <li *ngFor="let todo of todos">
+  <ul>
+
+    <li *ngFor="let todo of todos()">
+      <div class="list-wrapper">
         {{ todo }}
         <button (click)="removeTodo(todo)">Delete</button>
-      </li>
-    </ul>
-  </div>
+      </div>
+    </li>
+  </ul>
+</div>
