--- a/todoui-thymeleaf/src/main/resources/templates/items.html
+++ b/todoui-thymeleaf/src/main/resources/templates/items.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>Schönste aller Todo Listen</title>
+    <title>Most beautiful of all Java Todo Lists</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 </head>
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css"/>
@@ -10,7 +10,7 @@
 <div class="w3-row-padding w3-section" style="margin: 0px auto; width: 800px;" >
 
     <header class="w3-container w3-teal">
-        <h1>Schönste aller ToDo Listen</h1>
+        <h1>Most beautiful of all Java Todo Lists</h1>
     </header>
 
     <h2>Add a ToDo</h2>
