--- a/todoui-flask/templates/index.html
+++ b/todoui-flask/templates/index.html
@@ -1,6 +1,6 @@
 
 <!DOCTYPE HTML>
-<html xmlns:th="http://www.thymeleaf.org">
+<html>
 <head>
     <title>Most beautiful of all Python Todo Lists</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
